--- a/maven/jruby-complete/pom.xml
+++ b/maven/jruby-complete/pom.xml
@@ -254,6 +254,7 @@
                   <sysproperty key="jruby.base" value="${basedir}/../.."/>
                   <sysproperty key="jruby.lib" value="${basedir}/../../lib"/>
                   <sysproperty key="jruby.objectspace.enabled" value="true"/>
+                  <env key="CLASSPATH" value="${project.build.outputDirectory}"/>
                   <test name="org.jruby.test.MainTestSuite" unless="maven.test.skip"
                       todir="${project.build.directory}/surefire-reports"/>
                   <test name="org.jruby.test.ScriptTestSuite" unless="maven.test.skip"
