Updating compiler properties and flags for new standard: jruby.compile.mode=OFF|JIT|FORCE -C flag = OFF no flag = JIT +C flag = FORCE
git-svn-id: http://svn.codehaus.org/jruby/trunk/jruby@4860 961051c9-f516-0410-bf72-c9f7e237a7b7

--- a/build.xml
+++ b/build.xml
@@ -555,7 +555,7 @@ test/externals/rubinius/spec/parser"/></antcall>
       <sysproperty key="jruby.base" value="${basedir}"/>
       <sysproperty key="jruby.home" value="${basedir}"/>
       <sysproperty key="jruby.lib" value="${lib.dir}"/>
-      <sysproperty key="jruby.jit.enabled" value="false"/>
+      <sysproperty key="jruby.compile.mode" value="OFF"/>
       <sysproperty key="jruby.objectspace.enabled" value="true"/>
       <sysproperty key="emma.coverage.out.file" value="${test.results.dir}/coverage.emma" />
       <sysproperty key="emma.coverage.out.merge" value="true" />
@@ -593,7 +593,7 @@ test/externals/rubinius/spec/parser"/></antcall>
       <sysproperty key="jruby.base" value="${basedir}"/>
       <sysproperty key="jruby.home" value="${basedir}"/>
       <sysproperty key="jruby.lib" value="${lib.dir}"/>
-      <sysproperty key="jruby.jit.enabled" value="false"/>
+      <sysproperty key="jruby.compile.mode" value="OFF"/>
       <sysproperty key="jruby.relection" value="true"/>
       <sysproperty key="jruby.objectspace.enabled" value="true"/>
       <sysproperty key="emma.coverage.out.file" value="${test.results.dir}/coverage.emma" />
@@ -632,7 +632,7 @@ test/externals/rubinius/spec/parser"/></antcall>
       <sysproperty key="jruby.base" value="${basedir}"/>
       <sysproperty key="jruby.home" value="${basedir}"/>
       <sysproperty key="jruby.lib" value="${lib.dir}"/>
-      <sysproperty key="jruby.jit.enabled" value="true"/>
+      <sysproperty key="jruby.compile.mode" value="JIT"/>
       <sysproperty key="jruby.jit.threshold" value="0"/>
       <sysproperty key="jruby.objectspace.enabled" value="true"/>
       <sysproperty key="emma.coverage.out.file" value="${test.results.dir}/coverage.emma" />
@@ -676,7 +676,7 @@ test/externals/rubinius/spec/parser"/></antcall>
       <sysproperty key="jruby.base" value="${basedir}"/>
       <sysproperty key="jruby.home" value="${basedir}"/>
       <sysproperty key="jruby.lib" value="${lib.dir}"/>
-      <sysproperty key="jruby.jit.enabled" value="true"/>
+      <sysproperty key="jruby.compile.mode" value="JIT"/>
       <sysproperty key="jruby.jit.threshold" value="0"/>
       <sysproperty key="jruby.reflection" value="true"/>
       <sysproperty key="jruby.objectspace.enabled" value="true"/>
