JRUBY-1064: Rubinius core/object_spec failures (patch by Patrick Farley) JRBUY-1106: Process.euid() not implemented, causes MailFactory failure
git-svn-id: http://svn.codehaus.org/jruby/trunk/jruby@4867 961051c9-f516-0410-bf72-c9f7e237a7b7

--- a/build.xml
+++ b/build.xml
@@ -478,6 +478,7 @@ test/externals/rubinius/spec/core/integer_spec.rb
 test/externals/rubinius/spec/core/io_spec.rb
 test/externals/rubinius/spec/core/matchdata_spec.rb
 test/externals/rubinius/spec/core/nil_spec.rb
+test/externals/rubinius/spec/core/object_spec.rb
 test/externals/rubinius/spec/core/objectspace_spec.rb
 test/externals/rubinius/spec/core/proc_spec.rb
 test/externals/rubinius/spec/core/range_spec.rb
@@ -513,6 +514,7 @@ test/externals/rubinius/spec/core/integer_spec.rb
 test/externals/rubinius/spec/core/io_spec.rb
 test/externals/rubinius/spec/core/matchdata_spec.rb
 test/externals/rubinius/spec/core/nil_spec.rb
+test/externals/rubinius/spec/core/object_spec.rb
 test/externals/rubinius/spec/core/objectspace_spec.rb
 test/externals/rubinius/spec/core/proc_spec.rb
 test/externals/rubinius/spec/core/range_spec.rb
