POMs updated back to 1.1-SNAPSHOT
git-svn-id: http://svn.codehaus.org/jruby/trunk/jruby@4875 961051c9-f516-0410-bf72-c9f7e237a7b7

--- a/maven/jruby-jdk14-tests/pom.xml
+++ b/maven/jruby-jdk14-tests/pom.xml
@@ -4,21 +4,21 @@
   <parent>
     <groupId>org.jruby</groupId>
     <artifactId>shared</artifactId>
-    <version>1.1b1</version>
+    <version>1.1-SNAPSHOT</version>
     <relativePath>../../pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.jruby</groupId>
   <artifactId>jruby-jdk14-tests</artifactId>
   <packaging>jar</packaging>
-  <version>1.1b1</version>
+  <version>1.1-SNAPSHOT</version>
   <name>JRuby JDK 1.4 Retro Tests</name>
 
   <dependencies>
     <dependency>
       <groupId>org.jruby</groupId>
       <artifactId>jruby-jdk14</artifactId>
-      <version>1.1b1</version>
+      <version>1.1-SNAPSHOT</version>
     </dependency>
   </dependencies>
 
