dist was not adding new build_lib dir to src distribution files
git-svn-id: http://svn.codehaus.org/jruby/tags/jruby_1_1b1@4879 961051c9-f516-0410-bf72-c9f7e237a7b7

--- a/build.xml
+++ b/build.xml
@@ -756,6 +756,7 @@ test/externals/rubinius/spec/parser"/></antcall>
   <patternset id="dist.src.files">
     <patternset refid="dist.files"/>
     <include name="src/**"/>
+    <include name="build_lib/**"/>
     <include name="test/**"/>
     <include name="build.xml"/>
     <include name="build-config.xml"/>
