JRUBY-1540: Process.pid does not give the correct PID Make Eclipse users no longer see red anymore (classpath lib -> build_lib) Update dist targets to include newish build_lib directory
git-svn-id: http://svn.codehaus.org/jruby/trunk/jruby@4883 961051c9-f516-0410-bf72-c9f7e237a7b7

--- a/build.xml
+++ b/build.xml
@@ -724,6 +724,7 @@ test/externals/rubinius/spec/parser"/></antcall>
     <patternset refid="dist.files"/>
     <include name="src/**"/>
     <include name="test/**"/>
+    <include name="build_lib/**"/>
     <include name="build.xml"/>
     <include name="build-config.xml"/>
     <include name="nbproject/*"/>
