--- a/.classpath
+++ b/.classpath
@@ -3,13 +3,13 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry excluding="**/CVS/*" kind="src" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="build_lib/jna.jar"/>
+	<classpathentry kind="lib" path="build_lib/junit.jar"/>
+	<classpathentry kind="lib" path="build_lib/jline-0.9.91.jar"/>
 	<classpathentry kind="lib" path="lib/bsf.jar"/>
-	<classpathentry kind="lib" path="lib/jline-0.9.91.jar"/>
-	<classpathentry kind="lib" path="lib/backport-util-concurrent.jar"/>
-	<classpathentry kind="lib" path="lib/junit.jar"/>
-	<classpathentry kind="lib" path="lib/asm-3.0.jar"/>
-	<classpathentry kind="lib" path="lib/asm-commons-3.0.jar"/>
-	<classpathentry kind="lib" path="lib/asm-util-3.0.jar"/>
-	<classpathentry kind="lib" path="lib/jna.jar"/>
+	<classpathentry kind="lib" path="build_lib/backport-util-concurrent.jar"/>
+	<classpathentry kind="lib" path="build_lib/asm-util-3.0.jar"/>
+	<classpathentry kind="lib" path="build_lib/asm-commons-3.0.jar"/>
+	<classpathentry kind="lib" path="build_lib/asm-3.0.jar"/>
 	<classpathentry kind="output" path="build/classes/jruby"/>
 </classpath>
