--- a/.classpath
+++ b/.classpath
@@ -11,5 +11,7 @@
 	<classpathentry kind="lib" path="build_lib/asm-util-3.0.jar"/>
 	<classpathentry kind="lib" path="build_lib/asm-commons-3.0.jar"/>
 	<classpathentry kind="lib" path="build_lib/asm-3.0.jar"/>
+	<classpathentry kind="lib" path="build_lib/asm-tree-3.0.jar"/>
+	<classpathentry kind="lib" path="build_lib/asm-analysis-3.0.jar"/>
 	<classpathentry kind="output" path="build/classes/jruby"/>
 </classpath>
