--- a/build.xml
+++ b/build.xml
@@ -350,11 +350,12 @@
   </target>
 
   <!-- This now has enabled the compiler by default; we may want to run both with and without compilation later -->
-  <target name="test" depends="copy-test-files,instrument,run-junit-compiled,run-junit-interpreted,test-spec-compiled,test-spec-interpreted,coverage-report">
+  <target name="test" depends="copy-test-files,instrument,run-junit-compiled,run-junit-interpreted,run-junit-interpreted-1_9,test-spec-compiled,test-spec-interpreted,coverage-report">
   </target>
 
   <target name="test-compiled" depends="copy-test-files,run-junit-compiled"/>
   <target name="test-interpreted" depends="copy-test-files,run-junit-interpreted"/>
+  <target name="test-interpreted-1_9" depends="copy-test-files,run-junit-interpreted-1_9"/>
   <target name="test-reflected" depends="copy-test-files,run-junit-reflected-compiled"/>
   
   <target name="test-spec" depends="test-spec-compiled, test-spec-interpreted"/>
@@ -541,6 +542,37 @@ test/externals/rubinius/spec/parser"/></antcall>
       <test name="org.jruby.test.RubyTestTestSuite" todir="${test.results.dir}" />
       <test name="org.jvyamlb.YAMLLoadTest" todir="${test.results.dir}"/>
       <test name="org.jvyamlb.YAMLDumpTest" todir="${test.results.dir}"/>
+    </junit>
+  </target>
+  
+  <target name="run-junit-interpreted-1_9" description="runs junit tests">
+    <taskdef name="junit" classname="org.apache.tools.ant.taskdefs.optional.junit.JUnitTask" classpath="${build.lib.dir}/junit.jar"/>
+    <junit fork="yes" forkMode="once" haltonfailure="true" dir="${basedir}" maxmemory="384M" showoutput="true" timeout="180000">
+      <classpath>
+        <pathelement location="${jruby.instrumented.classes.dir}" />
+        <path refid="build.classpath"/>
+        <pathelement path="${java.class.path}"/>
+        <pathelement path="${lib.dir}/jruby.jar"/>
+        <pathelement location="${test.classes.dir}"/>
+        <pathelement path="${test.dir}/requireTest.jar"/>
+        <pathelement location="${test.dir}"/>
+      </classpath>
+      <sysproperty key="java.awt.headless" value="true"/>
+      <sysproperty key="jruby.base" value="${basedir}"/>
+      <sysproperty key="jruby.home" value="${basedir}"/>
+      <sysproperty key="jruby.lib" value="${lib.dir}"/>
+      <sysproperty key="jruby.compile.mode" value="OFF"/>
+      <sysproperty key="jruby.objectspace.enabled" value="true"/>
+      <sysproperty key="jruby.compat.version" value="ruby1_9"/>
+      <sysproperty key="emma.coverage.out.file" value="${test.results.dir}/coverage.emma" />
+      <sysproperty key="emma.coverage.out.merge" value="true" />
+
+      <jvmarg value="-ea"/>
+
+      <formatter type="xml"/>
+      <formatter type="brief" usefile="false"/>
+
+      <test name="org.jruby.test.Ruby1_9TestSuite" todir="${test.results.dir}" />
     </junit>
   </target>
   
