--- a/build.xml
+++ b/build.xml
@@ -354,8 +354,9 @@
   <target name="test-interpreted" depends="copy-test-files,run-junit-interpreted"/>
   <target name="test-interpreted-1.9" depends="copy-test-files,run-junit-interpreted-1.9,run-junit-compiled-1.9"/>
   <target name="test-reflected" depends="copy-test-files,run-junit-reflected-compiled,run-junit-reflected-interpreted"/>
+  <target name="test-threadpool" depends="copy-test-files,run-junit-compiled-threadpool,run-junit-interpreted-threadpool"/>
   
-  <target name="test-all" depends="copy-test-files,instrument,run-junit-interpreted,run-junit-compiled,run-junit-interpreted-1.9,run-junit-compiled-1.9,run-junit-reflected-interpreted,run-junit-reflected-compiled,test-spec-compiled,test-spec-interpreted,coverage-report"/>
+  <target name="test-all" depends="copy-test-files,instrument,run-junit-interpreted,run-junit-compiled,run-junit-interpreted-1.9,run-junit-compiled-1.9,run-junit-reflected-interpreted,run-junit-reflected-compiled,run-junit-compiled-threadpool,run-junit-interpreted-threadpool,test-spec-compiled,test-spec-interpreted,coverage-report"/>
   
   <target name="test-spec" depends="test-spec-compiled, test-spec-interpreted"/>
   
