Binaries were not getting jar'ed up properly by maven
git-svn-id: http://svn.codehaus.org/jruby/trunk/jruby@4966 961051c9-f516-0410-bf72-c9f7e237a7b7

--- a/maven/jruby/pom.xml
+++ b/maven/jruby/pom.xml
@@ -155,9 +155,7 @@
                 </delete>
                 <jarjar destfile="${project.build.directory}/${project.build.finalName}.jar">
                   <fileset dir="${project.build.outputDirectory}">
-                    <include name="**/*.class"/>
-                    <include name="**/*.properties"/>
-                    <include name="**/*.rb"/>
+                    <include name="**/*"/>
                     <exclude name="org/jruby/util/ant/**/*.class"/>
                   </fileset>
                   <rule pattern="org.objectweb.asm.**" result="jruby.objectweb.asm.@1"/>
