--- a/maven/jruby-complete/pom.xml
+++ b/maven/jruby-complete/pom.xml
@@ -212,9 +212,7 @@
                 <jarjar destfile="${project.build.directory}/${project.build.finalName}.jar">
                   <fileset dir="${project.build.outputDirectory}">
                     <include name="META-INF/jruby.home/**/*"/>
-                    <include name="**/*.class"/>
-                    <include name="**/*.properties"/>
-                    <include name="**/*.rb"/>
+                    <include name="**/*"/>
                     <exclude name="org/jruby/util/ant/**/*.class"/>
                   </fileset>
                   <rule pattern="org.objectweb.asm.**" result="jruby.objectweb.asm.@1"/>
